test/webgl/error/nested_block_comments.true
/*this is an improperly /* nested
 comment */ */
